--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ div.antibuddhist {
     text-align: right;
     border-left-style: solid;
 }
-div.hindu {
+div.prohindu {
     background-color: #a9520b;
     text-align: left;
     border-right-style: solid;
